# ALACRITY-ADIOS

./: .cproject  .gitignore  .project  ACKNOWLEDGMENT  AUTHORS  COPYING  HOWTOBUILD  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  myrunconf  myrunconf~  run-tests.sh  runconf
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: ac_fastbit.m4  ac_ridcompress.m4  ac_timer.m4
manual/: ALACRITY-Dev-Manual.tex
manual/ref/: s3d.xml  sample-s3d.xml
ridcompress/: Makefile.am  gen_fixedlengthcode.cpp  patchedframeofreference.cpp  patchedframeofreference.h  pfordelta-c-interface.cpp  pfordelta-c-interface.h
script/: block_inspect_overlap.sh  bmap_build_thrpt_gts_sith.sh  bmap_build_thrpt_sith.sh  bmap_build_thrpt_sith.sh~  count_exp.sh  crctness.sh  decode_bmap_vs_debmap.sh  decomp_alac_index.log~  encode_ssmi_ds.sh  encode_ssmi_ds.sh~  encode_template.sh  env_setting.sh  env_setting_flash_sith.sh  env_setting_sith.sh  env_setting_sith.sh~  f_a_login.sh  fastbit.sh  fastbit_alac_comp.sh  fastbit_template.sh  fastbit_template.sh~  flash_run_sith.sh  index_size.out  index_size.sh  index_size_3var.sh  malac_nopt_3var.sh  mem_trace_path.sh  opt_alac_comp.sh  output.txt  rid_inspect_decomp_block.sh  run_all_tonight.sh  run_all_tonight.sh~  run_erpfd.sh  run_erpfd.sh~  run_fastbit.sh  run_fastbit.sh~  run_test_avoid_cache.sh  run_test_avoid_cache.sh~  run_test_avoid_cache_flash.sh  selectivity.out  selectivity.sh  (+10 more)
script/archives/: alac.sh  alac_2var.sh  alac_3var.sh  alac_4var.sh  fastbit_2var.sh  fastbit_3var.sh  fastbit_3var_all_sel.sh  fastbit_4var.sh  fastbit_4var_all_sel.sh  fastbit_alac_comp_2vars.sh  fastbit_alac_comp_3vars.sh
script/exp_results/: alac_decode_bmap.log~  bmap_build_thrpt.log.out  bmap_build_thrpt_s3d_gts_flash.log_p  bmap_build_thrpt_s3d_gts_flash.log_p_avg  bmap_build_thrpt_s3d_gts_flash.log_p_p  bmap_build_thrpt_s3d_gts_flash.log_p_p_avg  bmap_build_thrpt_s3d_gts_flash.log_p_p_avg~  cal_avg_2.sh  cal_avg_2.sh~  cal_bit_expanding.txt  covered_exp_cal.txt  epd_bmap.log.out  proc_bmap_build_thrpt.sh  proc_bmap_build_thrpt.sh~  process_log.sh~  re_process_log.sh  re_process_log.sh~  stat-temp.csv  stat-uvel.csv  stat-vvel.csv  stat-wvel.csv  svn-commit.tmp  temp_1_exp.csv  temp_9_exp.csv  timing_encode.log_p  timing_encode_flash.log_p  timing_encode_gts.log_p  timing_encode_gts_potential.log_p  timing_encode_gts_potential.log~  timing_encode_s3d.log.out  timing_encode_s3d.log_p  timing_encode_s3d.log_p_p  timing_encode_s3d.log_p_p_avg  timing_encode_s3d.log_p~  timing_encode_s3d.log~  uvel_1_exp.csv  uvel_9_exp.csv  vvel_1_exp.csv  vvel_9_exp.csv  wvel_1_exp.csv  (+1 more)
script/exp_results/Encoding/: cal_avg_2.sh  cal_avg_2.sh~  process_log.sh  process_log.sh~  re_process_log.sh  re_process_log.sh~  timing_encode_flash.log_p  timing_encode_flash.log_p_p  timing_encode_flash.log_p_p_avg  timing_encode_gts.log_p  timing_encode_gts.log_p_p  timing_encode_gts.log_p_p_avg  timing_encode_s3d.log_p  timing_encode_s3d.log_p_p  timing_encode_s3d.log_p_p_avg
script/preparing_data/: duplicate.sh  duplicate.sh~  encode.sh  encode.sh~
script/process_data/: embed.log.out  extract-data-for-plotting.sh  purge-qsub-output.sh
script/skipping-pfd/: data.csv  extract_plot_data.sh  extract_plot_data.sh~  run.sh  run.sh~  run_erpfd.sh  run_erpfd.sh~
src/: ALConfigure.c  ALConvert.c  ALDataDestroy.c  ALDatatype.c  ALDecode.c  ALEncode.c  ALErrorString.c  ALFileStore.c  ALMerge.c  ALRIDCompression.c  ALRIDTranslate.c  ALSerialization.c  ALSerializationLegacy.c  ALStore.c  ALUtil.c  Makefile  Makefile.am  Makefile.in
src/.deps/: ALConfigure.Po  ALConvert.Po  ALDataDestroy.Po  ALDatatype.Po  ALDecode.Po  ALEncode.Po  ALFileStore.Po  ALMerge.Po  ALRIDCompression.Po  ALRIDTranslate.Po  ALSerialization.Po  ALSerializationLegacy.Po  ALStore.Po  ALStorePOSIX.Po  ALUtil.Po  findbinrange.templates.Po  memstream.Po  readreconst.templates.Po  trimbins.templates.Po  uniquery.Po
src/include/: ALUtil.h  alacrity-core.h  alacrity-datatype.h  alacrity-filestore.h  alacrity-memstream.h  alacrity-part-manip.h  alacrity-rid-compress.h  alacrity-serialization-debug.h  alacrity-serialization-legacy.h  alacrity-serialization.h  alacrity-store.h  alacrity-types.h  alacrity-uniquery.h  alacrity-util.h  alacrity.h  memstream.h  timer.h
src/io/: ALStoreADIOS.c  ALStorePOSIX.c  ALStoreTemplate.c
src/memstream/: memstream.c
src/timer/: timer.c
src/uniquery/: findbinrange.templates.cc  helpers.h  readreconst.templates.cc  trimbins.templates.cc  uniquery.c  uniquery.c.old
tests/: Makefile  Makefile.am  Makefile.in  bench-encode-phases.c  test-decode.c  test-encode.c  test-filestore-ciim.c  test-filestore.c  test-merge.c  test-rid-translate.c  test-serialize-ciim.c  test-serialize.c  test-store-multipart.c  test-store.c  test-timer.c  test-trycatch.c  test-uniquery-based-indexing.c  test-uniquery-correctness.c  test-uniquery.c  uniquery_perf_profiling.sh
tools/: Makefile  Makefile.am  Makefile.am~  Makefile.in  alacrity.c  bit_build_thrpt  multiquery.c  multiquery.c_by_BY_algm  multiquery.c~  multiquery_hybrid_decode.c~  multiquery_index_size.c~  trycatch.h  uniquery.c  uniquery.c~
tools/.deps/: alac-alacrity.Po  bit_build_thrpt-bit_build_thrpt.Po  multiquery-multiquery.Po  multiquery_all_bins_hybrid_decode-multiquery_all_bins_hybrid_decode.Po  multiquery_bins_overlap-multiquery_bins_overlap.Po  multiquery_block_overlap-multiquery_block_overlap.Po  multiquery_decode_bmap-multiquery_decode_bmap.Po  multiquery_erpfd-multiquery_ERPFD.Po  multiquery_hybrid_decode-multiquery_hybrid_decode.Po  multiquery_index_size-multiquery_index_size.Po  multiquery_inspect_binary-multiquery_inspect_binary.Po  multiquery_inspect_decode-multiquery_inspect_decode.Po  multiquery_inspect_encoded-multiquery_inspect_encoded.Po  multiquery_merge-multiquery_merge.Po  multiquery_rid_decomp_block-multiquery_rid_decomp_block.Po  multiquery_skip-multiquery_skip.Po  multiquery_skip_cache-multiquery_skip_caching.Po  uniquery-uniquery.Po
(+340 files in other folders)
